--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/menu_form"
         android:title="Form"
-        android:icon="@android:drawable/ic_menu_edit" />
+        android:icon="@drawable/menue" />
     <item
         android:id="@+id/menu_profile"
         android:title="Profile"
-        android:icon="@android:drawable/ic_menu_myplaces" />
+        android:icon="@drawable/user" />
     <item
         android:id="@+id/menu_product"
         android:title="Product"
-        android:icon="@android:drawable/ic_menu_view" />
+        android:icon="@drawable/order" />
     <item
         android:id="@+id/menu_calc"
         android:title="Calculator"
-        android:icon="@android:drawable/ic_menu_manage" />
+        android:icon="@drawable/calculator" />
 </menu>
